# vanguard-kit

./: .flake8  CODE_OF_CONDUCT.md  Pipfile  README.md  mypy.ini  noxfile.py  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: main.yml  release.yml  test-pypi.yml
tests/: example_b.html  test_complex_example.py  test_dunder_api.py  test_html_distance.py  test_html_tree.py  test_realistic_examples_a_and_b.py  test_realistic_examples_a_and_c.py  test_realistic_examples_a_and_d.py
tests/html_examples/: complex_example_a.html  complex_example_b.html  example_a.html  realistic_example_a.html  realistic_example_b.html  realistic_example_c.html  realistic_example_d.html
vanguard_kit/: __init__.py  html_tree.py  vanguard_node.py
vanguardkit/: __init__.py  html_distance.py  html_tree.py
